<resources>
    <string name="app_name">Assignment 4</string>
    <string name="lblLogin">Login ID:</string>
    <string name="lblPassword">Password:</string>
    <string name="btnLogin">Login</string>
    <string-array name="Activities">
        <item>Login</item>
        <item>Add/View Student Info</item>
        <item>Modify/View Student Info</item>
        <item>Modify Class Room Data</item>
        <item>View Classroom Infor</item>
        <item>Update Student Info</item>
    </string-array>
    <string name="stuID">Student ID</string>
    <string name="stuFName">First Name</string>
    <string name="stuLName">Last Name</string>
    <string name="stuDPT">Department</string>

    <string name="profID">Prof ID</string>
    <string name="classID">Class ID</string>


<!--    Buttons-->
    <string name="buttonAddStudent">Add Student</string>
</resources>