<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--Row 1-->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">
            <!--            Student ID Label-->
            <TextView
                android:id="@+id/lblStuID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stuID"
                android:textSize="@dimen/Heading" />
        </TableRow>
        <!--        Ends Row 1-->
        <!-- Row 2-->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/editTextStudentId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center|center_vertical"
                android:inputType="numberPassword"
                android:textSize="@dimen/Entry"
                android:ems="10"/>
        </TableRow>
        <!-- Ends Row 2-->

        <!--Row 3-->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">
            <!--            Student First Name Label-->
            <TextView
                android:id="@+id/lblStuFName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stuFName"
                android:textSize="@dimen/Heading" />
        </TableRow>
        <!--        Ends Row 3-->
        <!--        Row 4-->
        <TableRow>
            <EditText
                android:id="@+id/editTextStudentFirstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center|center_vertical"
                android:inputType="textPersonName"
                android:textSize="@dimen/Entry"
                android:ems="10"/>
        </TableRow>
        <!--        Ends Row 4-->

        <!--Row 5-->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">
            <!--            Student First Name Label-->
            <TextView
                android:id="@+id/lblStuLName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stuFName"
                android:textSize="@dimen/Heading" />
        </TableRow>
        <!--        Ends Row 5-->
        <!--        Row 6-->
        <TableRow>
            <EditText
                android:id="@+id/editTextStudentLastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center|center_vertical"
                android:inputType="textPersonName"
                android:textSize="@dimen/Entry"
                android:ems="10"/>
        </TableRow>
        <!--        Ends Row 6-->

        <!--Row 7-->
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">
            <!--            Student First Name Label-->
            <TextView
                android:id="@+id/lblDept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stuFName"
                android:textSize="@dimen/Heading" />
        </TableRow>
        <!--        Ends Row 7-->
        <!--        Row 8-->
        <TableRow>
            <EditText
                android:id="@+id/editTextStudentDepartment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center|center_vertical"
                android:inputType="textPersonName"
                android:textSize="@dimen/Entry"
                android:ems="10"/>
        </TableRow>
        <!--        Ends Row 8-->

<!--        Row 9 Button-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnAddStudent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_vertical"
                android:text="@string/buttonAddStudent"
                android:backgroundTint="@color/btnBGTint"/>

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>